--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </h2>
 
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img class="card__cover default-image" src="images/cat.webp" alt="Изображение с кошечкой, которая смотрит в кадр" />
         </div>
         <div class="card__content">
@@ -78,7 +78,7 @@
         <h2 class="card__header">1 спринт: Я — чистый лист</h2>
 
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img
             class="card__cover contrast-image"
             src="images/cat2.webp"
@@ -136,7 +136,7 @@
       <article class="card">
         <h2 class="card__header">1 спринт: А если не получится?</h2>
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img class="card__cover blurry-image" src="images/cat3.webp" alt="изображение где кошечка смотрит сквозь блюр" />
         </div>
         <div class="card__content">
@@ -188,7 +188,7 @@
       <article class="card">
         <h2 class="card__header">2 спринт: Погоня за идеалом</h2>
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img class="card__cover hue-image" src="images/cat4.webp" alt="изображение где кошечка смотрит со сдвигом hue" />
         </div>
         <div class="card__content">
@@ -243,7 +243,7 @@
         <h2 class="card__header">2 спринт: О тех, кто рядом</h2>
 
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img class="card__cover invert-image" src="images/cat5.webp" alt="изображение где кошечка смотрит, но цвета инвертированы" />
         </div>
         <div class="card__content">
@@ -298,7 +298,7 @@
       <article class="card">
         <h2 class="card__header">3 спринт: Обходные стратегии</h2>
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img
             class="card__cover grayscale-image"
             src="images/cat6.webp"
@@ -354,7 +354,7 @@
       <article class="card">
         <h2 class="card__header">3 спринт: Когда опускаются руки</h2>
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img
             class="card__cover multiply-image"
             src="images/cat7.webp"
@@ -412,7 +412,7 @@
       <article class="card">
         <h2 class="card__header">«Сейчас я здесь»</h2>
         <div class="card__labeled-img">
-          <span class="card__label">&lt;/html&gt;</span>
+          <span class="card__label" aria-hidden="true">&lt;/html&gt;</span>
           <img
             class="card__cover multiply-image"
             src="images/cat8.webp"
