--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </p>
           <p>Был воодушевлен. Все идет вполне хорошо.</p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -68,7 +68,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -95,7 +95,7 @@
           </p>
           <p>Все еще норм, интересный материал.</p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -127,7 +127,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -147,7 +147,7 @@
           </p>
           <p>Уже гуд!</p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -179,7 +179,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -201,7 +201,7 @@
           </p>
           <p>Слава богу, что я не перфекционист.</p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -233,7 +233,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -257,7 +257,7 @@
           </p>
           <p>Слушал подкасты про медуз!</p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -289,7 +289,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -313,7 +313,7 @@
           </p>
           <p>Cнова норм, но лейаут в фигме за ночь куда-то сбежал</p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -345,7 +345,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -371,7 +371,7 @@
           </p>
           <p>Накосячил с переменными, сам себя запутал, но в итоге распутал.</p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -403,7 +403,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -433,7 +433,7 @@
             и привыкну
           </p>
           <div class="button_group">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -465,18 +465,18 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="button card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
-      <footer>
+      <article class="modal-block">
         <button
           type="button"
           onclick="window['floppy-modal'].showModal()"
           aria-controls="floppy-modal"
-          class="card__button"
+          class="button card__button"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -499,17 +499,15 @@
               <use href="svg/icons.svg#floppy"></use>
             </svg>
             <p>Вставьте дискету, чтобы продолжить</p>
-            <p></p>
           </div>
           <button
             type="button"
             onclick="window['floppy-modal'].close()"
-            class="card__button modal_button"
-          >
-            <span class="button__text">OK</span>
+            class="button card__button modal_button">
+            <span class="button__text">ok</span>
           </button>
         </dialog>
-      </footer>
+      </article>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
